# rust-payjoin

./: .coderabbit.yaml  .gitignore  Cargo.toml  PULL-REQUEST.md  STATUS.md  payjoin-client.Dockerfile  taplo.toml
.github/scripts/: respond_to_standup_comment.py
.github/workflows/: rust.yml  standup-on-comment.yml
bip78/src/receiver/: mod.rs
fuzz/: .gitignore  Cargo.toml
masque/: Cargo.toml
masque/example_cert/: cert.crt
ohttp-relay/: Cargo.toml
payjoin/: Cargo.toml
payjoin-cli/: .gitignore  Cargo.toml  README.md
payjoin-cli/src/: app.rs  db.rs  main.rs
payjoin-cli/src/app/: config.rs  mod.rs  v1.rs  v2.rs  wallet.rs
payjoin-cli/src/app/v2/: mod.rs
payjoin-cli/src/db/: error.rs  mod.rs  v2.rs
payjoin-cli/tests/: e2e.rs
payjoin-client/: Cargo.toml
payjoin-client/src/: main.rs
payjoin-directory/: .gitignore  Cargo.toml
payjoin-directory/src/: lib.rs  main.rs
payjoin-directory/src/db/: mod.rs  nostr.rs
payjoin-ffi/: .gitignore  Cargo.toml
payjoin-ffi/csharp/: .gitignore
payjoin-ffi/dart/: .gitignore
payjoin-ffi/dart/lib/: http.dart
payjoin-ffi/dart/native/: Cargo.toml
payjoin-ffi/javascript/test-utils/: Cargo.toml
payjoin-ffi/python/: .gitignore
payjoin-ffi/src/receive/: mod.rs  uni.rs
payjoin-ffi/src/send/: error.rs  mod.rs
payjoin-mailroom/: Cargo.toml
payjoin-python/: .gitignore  README.md  generate.sh  setup.py
payjoin-python/tests/: test_payjoin.py
payjoin-relay/: Cargo.toml  README.md
payjoin-relay/example_cert/: cert.key  cert.pem  key.pem
payjoin-relay/src/: db.rs  main.rs  masque.rs
payjoin-test-utils/: Cargo.toml
payjoin-test-utils/src/: lib.rs  persist.rs
payjoin/src/: directory.rs  into_url.rs  io.rs  lib.rs  ohttp.rs  optional_parameters.rs  persist.rs  psbt.rs  uri.rs  v2.rs
payjoin/src/core/: hpke.rs  persist.rs
payjoin/src/core/psbt/: mod.rs
payjoin/src/core/receive/common/: mod.rs
payjoin/src/core/receive/v1/: mod.rs
payjoin/src/core/receive/v2/: mod.rs  session.rs
payjoin/src/core/send/: error.rs  mod.rs  v1.rs
payjoin/src/core/send/v2/: error.rs  mod.rs  session.rs
payjoin/src/core/uri/: error.rs  mod.rs
payjoin/src/persist/: mod.rs
payjoin/src/receive/: error.rs  mod.rs  optional_parameters.rs  v2.rs
payjoin/src/receive/v1/: mod.rs
payjoin/src/receive/v2/: error.rs  mod.rs  persist.rs  session.rs
payjoin/src/send/: error.rs  mod.rs
payjoin/src/send/multiparty/: mod.rs
payjoin/src/send/v1/: error.rs  mod.rs
payjoin/src/send/v2/: error.rs  mod.rs
payjoin/src/uri/: mod.rs  url_ext.rs
payjoin/tests/: integration.rs
