[package]
name = "payjoin-relay"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.2"
anyhow = "1.0.71"
hyper = "0.14.27"
http = "0.2.4"
# ohttp = "0.4.0"
httparse = "1.8.0"
ohttp = { path = "../../ohttp/ohttp" }
bhttp = { version = "0.4.0", features = ["http"] }
payjoin = { path = "../payjoin", features = ["v2"] }
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.12.0", features = ["full"] }
tower-service = "0.3.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
