[package]
name = "payjoin"
version = "0.9.0"
authors = ["Dan Gould <dan@chaincase.app>"]
description = "Payjoin Library for the BIP78 Pay to Endpoint protocol."
repository = "https://github.com/payjoin/rust-payjoin"
readme = "../README.md"
keywords = ["bip78", "payjoin", "bitcoin"]
categories = ["api-bindings", "cryptography::cryptocurrencies", "network-programming"]
license = "MITNFA"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
send = []
receive = ["rand"]
base64 = ["bitcoin/base64"]
v2 = ["bitcoin/rand-std", "chacha20poly1305", "ohttp", "bhttp", "serde", "serde_json"]

[dependencies]
bitcoin = { version = "0.30.0", features = ["base64"] }
bip21 = "0.3.1"
chacha20poly1305 = { version = "0.10.1", optional = true }
log = { version = "0.4.14"}
#ohttp = { version = "0.4.0", optional = true }
bhttp = { path = "../../ohttp/bhttp", optional = true }
ohttp = { path = "../../ohttp/ohttp", optional = true }
rand = { version = "0.8.4", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
url = "2.2.2"

[dev-dependencies]
env_logger = "0.9.0"
bitcoind = { version = "0.31.1", features = ["0_21_2"] }

[package.metadata.docs.rs]
features = ["send", "receive", "base64"]    