[package]
authors = ["Dan Gould <d@ngould.dev>"]
categories = [
  "api-bindings",
  "cryptography::cryptocurrencies",
  "network-programming",
]
description = "Payjoin Library implementing BIP 78 and BIP 77 batching protocols."
edition = "2021"
exclude = ["tests"]
keywords = ["bip78", "payjoin", "bitcoin"]
license = "MITNFA"
name = "payjoin"
readme = "../README.md"
repository = "https://github.com/payjoin/rust-payjoin"
resolver = "2"
rust-version = "1.85"
version = "1.0.0-rc.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["v2"]
#[doc = "Core features for payjoin state machines"]
_core = [
  "bitcoin/rand-std",
  "dep:http",
  "serde_json",
  "url/serde",
  "bitcoin_uri",
  "serde",
  "bitcoin/serde",
]
directory = []
v1 = ["_core"]
v2 = ["_core", "hpke", "bhttp", "ohttp", "directory"]
#[doc = "Functions to fetch OHTTP keys via CONNECT proxy using reqwest. Enables `v2` since only `v2` uses OHTTP."]
_manual-tls = ["reqwest/rustls-tls", "rustls"]
_test-utils = []
io = ["v2", "reqwest/rustls-tls"]

[dependencies]
bhttp = { version = "0.6.1", optional = true }
bitcoin = { version = "0.32.7", features = ["base64"] }
bitcoin_uri = { version = "0.1.0", optional = true }
hpke = { package = "bitcoin-hpke", version = "0.13.0", optional = true }
http = { version = "1.3.1", optional = true }
ohttp = { package = "bitcoin-ohttp", version = "0.6.0", optional = true }
reqwest = { version = "0.12.23", default-features = false, optional = true }
rustls = { version = "0.23.31", optional = true, default-features = false, features = [
  "ring",
] }
serde = { version = "1.0.219", default-features = false, optional = true }
serde_json = { version = "1.0.142", optional = true }
tracing = "0.1.41"
url = { version = "2.5.4", optional = true, default-features = false, features = [
  "serde",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1.1.0"

[dev-dependencies]
once_cell = "1.21.3"
payjoin-test-utils = { version = "0.0.1" }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
