[workspace]

[package]
description = "This is a simple wrapper crate which re-exports payjoin-ffi for publishing to pub.dev"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "payjoin-ffi-wrapper"
publish = false
version = "0.1.0"

[features]
_test-utils = ["payjoin-ffi/_test-utils"]

[lib]
crate-type = ["staticlib", "cdylib"]
name = "payjoin_ffi_wrapper"

[dependencies]
payjoin-ffi = { git = "https://github.com/payjoin/rust-payjoin.git", branch = "master", features = [
  "dart",
] }

[patch."https://github.com/payjoin/rust-payjoin.git"]
payjoin-ffi = { path = "../.." }

[patch.crates-io]
ohttp-relay = { path = "../../../ohttp-relay" }
payjoin = { path = "../../../payjoin" }
payjoin-directory = { path = "../../../payjoin-directory" }
payjoin-mailroom = { path = "../../../payjoin-mailroom" }
payjoin-test-utils = { path = "../../../payjoin-test-utils" }
